Implement /activitygetvolunteersbefore #7 @1h
